/*
  Various messages associated with holding distributions.
*/

syntax = "proto3";

import "core.proto";
import "core_enums.proto";

package distributions;

option java_package="plus_modeled";

/*
  Specifies various distributions of an instrument
*/
message DistributionSpec {
  /*
    Dividend yield attributed to *qualified* dividends.
    Quoted as rate curve. Default implies no qualified dividends.
  */
  optional core.RateCurve qualified_dividend = 1;
  
  /*
    Dividend yield attributed to *unqualified* dividends.
    Quoted as rate curve. Default implies no unqualified dividends.
  */
  optional core.RateCurve unqualified_dividend = 2;
  
  /*
    Capital gain distributions.
    Quoted as rate curve. Default implies no capital gain distributions.
  */
  optional core.RateCurve capital_gain = 3;
  
  /*
    Interest yield.
    Quoted as rate curve. Default implies no interest paid.
  */
  optional core.RateCurve interest = 4;
  
  /*
    If true distributions will made available for spending/investment.
     By default distributions are reinvested.
  */
  bool use_distributions = 5;
}